search input collapsibility fix; cursors customization;

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -80,6 +80,13 @@ html, body {
     background-color: #e2e2e2;
     z-index: 1;
 
+    &.shrinkedHorizontal {
+        #searchContainer, #searchField {
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
+
     input {
         background: linear-gradient(to bottom, #f7f7f8 0%,#ffffff 100%);
         border-radius: 3px;
@@ -499,11 +506,23 @@ html, body {
     left: 0;
     z-index: 0;
     position: absolute;
+    background: #efefef;
+    cursor: -webkit-grab;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 circle, rect {
     fill: whitesmoke;
     stroke: black;
+    cursor: pointer;
 
     &:hover {
         fill: rgb(133, 181, 199);
